<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/wallpaper"
    tools:context="com.github.vladimirdotk.ipcalclite.IpCalcActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35dp"
        android:gravity="center"
        android:id="@+id/headerText"
        android:textStyle="bold"
        android:textColor="#FFF"/>

    <LinearLayout
        android:id="@+id/ipLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/headerText"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_text"
            android:textSize="22dp"
            android:textColor="#FFF"
            />
        <EditText
            android:id="@+id/ip_address"
            android:inputType="number|numberDecimal"
            android:singleLine="true"
            android:lines="1"
            android:digits="0123456789."
            android:layout_width="wrap_content"
            android:hint="@string/ip_hint"
            android:layout_height="wrap_content"
            android:maxLength="15"
            android:textSize="22dp"
            android:textColor="#FFF"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_slash"
            android:textColor="#FFF"
            android:textSize="22dp"
            />
        <EditText
            android:id="@+id/ip_mask"
            android:inputType="number|numberDecimal"
            android:singleLine="true"
            android:lines="1"
            android:digits="0123456789"
            android:layout_width="wrap_content"
            android:hint="@string/ip_mask_hint"
            android:layout_height="wrap_content"
            android:maxLength="15"
            android:textSize="22dp"
            android:textColor="#FFF"
            />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:layout_below="@+id/ipLayout"
        android:layout_marginTop="10dp"
        android:id="@+id/hr"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hr"
        android:id="@+id/networkIpLayout"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/network_ip_text"
            android:textColor="#FFF"
            android:textSize="22dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#000"
            android:textSize="22dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/networkIpValue"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/networkIpLayout"
        android:id="@+id/totalIpsLayout"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/total_ips_text"
            android:textColor="#FFF"
            android:textSize="22dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#000"
            android:textSize="22dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/totalIpsValue"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@+id/totalIpsLayout">

        <Button
            android:id="@+id/calculateBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/calculate_btn_text"
            android:textColor="#FFF"
            android:background="@color/colorPrimary"
            android:padding="20dp"
            />
        <Button
            android:id="@+id/historyBtn"
            android:layout_marginLeft="10dp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/history_btn_text"
            android:textColor="#FFF"
            android:background="@color/colorPrimary"
            android:padding="20dp"
            />

    </LinearLayout>

</RelativeLayout>
